--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,57 @@
 body {
   font-family: "Roboto", sans-serif;
-  color:#434455;
-  background-color: #FFFFFF;
+  color: #434455;
+  background-color: #ffffff;
+  box-sizing: border-box;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin-bottom: 0;
+  margin-top: 0;
+}
+
+ul {
+  margin-bottom: 0;
+  margin-top: 0;
+  padding-left: 0;
+  list-style: none;
+}
+
+address {
+  font-style: normal;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.container {
+  max-width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /* Logotype */
+.header-line {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e7e9fc;
+}
 .logo-header {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -12,21 +60,32 @@ body {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   text-decoration: none;
-  color:#4d5ae5;
+  color: #4d5ae5;
+  padding: 24px 0;
 }
+
 .logo-header-span {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
-    font-size: 18px;
+  font-size: 18px;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #2e2f42;
 }
+
 /* navigation */
 .navigation {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+  justify-content: space-between;
+  padding-right: 332px;
 }
+
 .navigation-list {
+  display: flex;
+  gap: 40px;
 }
 
 .navigation-item {
@@ -39,14 +98,24 @@ body {
 }
 
 .navigation-item span:active {
-    color: #404bbf; 
-    text-decoration: underline;}
+  color: #404bbf;
+  text-decoration: underline;
+}
 
-.navigation-item:hover {color: #404bbf;}
-.navigation-item:focus {color:#404bbf;}
+.navigation-item:hover {
+  color: #404bbf;
+}
+.navigation-item:focus {
+  color: #404bbf;
+}
 
 .address-details {
-    font-style: normal;
+  font-style: normal;
+}
+
+.address-list {
+  display: flex;
+  gap: 40px;
 }
 
 .details-item {
@@ -58,42 +127,62 @@ body {
 }
 
 .details-item:hover {
-    color: #404bbf;
+  color: #404bbf;
 }
 
 .details-item:focus {
-    color: #404bbf;
+  color: #404bbf;
 }
 /* section 1 */
 .section-headline {
   background-color: #2e2f42;
 }
+
+.container-header {
+  padding: 188px 316px;
+}
+
 .section-headline-main {
   font-size: 56px;
   line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  margin-bottom: 48px;
 }
+
 .button {
-    background-color: #4d5ae5;
+  background-color: #4d5ae5;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
   cursor: pointer;
+  text-align: center;
+  border-radius: 4px;
+  padding: 16px 32px;
+  border: none;
+  display: block;
+  margin: 0 auto;
 }
 
-.button:hover {background-color: #404BBF;}
-.button:focus {background-color: #404BBF;}
+.button:hover {
+  background-color: #404bbf;
+}
+.button:focus {
+  background-color: #404bbf;
+}
 
 /* section 2 */
 
 .benefits {
 }
 .benefits-list {
+  display: flex;
+  gap: 24px;
 }
+
 .benefits-item {
 }
 .benefits-title-item {
@@ -101,7 +190,9 @@ body {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color:#2e2f42;
+  color: #2e2f42;
+  padding-top: 120px;
+  padding-bottom: 8px;
 }
 
 .benefits-text-item {
@@ -109,6 +200,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  /* padding-bottom: 120px; */
 }
 
 ul {
@@ -116,7 +208,7 @@ ul {
 }
 /* Section 3 */
 .team {
-  background-color: #F4F4FD
+  background-color: #f4f4fd;
 }
 
 .team-title {
@@ -124,15 +216,20 @@ ul {
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
-  text-transform:capitalize;
+  text-transform: capitalize;
   color: #2e2f42;
+  padding-top: 120px;
+  padding-bottom: 92px;
 }
 
 .team-list {
+  display: flex;
+  gap: 24px;
+  padding-bottom: 120px;
 }
 
 .team-list-item {
-  background-color: #FFFFFF 
+  background-color: #ffffff;
 }
 
 .team-list-image {
@@ -145,6 +242,8 @@ ul {
   text-align: center;
   text-transform: capitalize;
   color: #2e2f42;
+  padding-top: 32px;
+  padding-bottom: 8px;
 }
 
 .team-list-text {
@@ -153,6 +252,7 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
+  padding-bottom: 32px;
 }
 /* Portfolio */
 .portfolio {
@@ -163,12 +263,19 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
-  color:  #2e2f42;
+  color: #2e2f42;
+  padding-bottom: 92px;
 }
 .portfolio-list {
+  display: flex;
+  gap: 8px;
+  flex-wrap: wrap;
 }
 .portfolio-list-item {
+  align-items: flex-start;
+  border: 1px solid #e7e9fc;
 }
+
 .portfolio-list-image {
 }
 .portfolio-list-title {
@@ -176,13 +283,18 @@ ul {
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
-  color:#2e2f42;
+  color: #2e2f42;
+  padding-top: 32px;
+  padding-left: 8px;
+  padding-bottom: 8px;
 }
 .portfolio-list-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  padding-left: 8px;
+  padding-bottom: 30px;
 }
 
 .footer {
@@ -194,6 +306,12 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  padding-bottom: 100px;
+  max-width: 420px;
+}
+.logo-footer-container {
+  padding-top: 100px;
+  padding-bottom: 24px;
 }
 
 .logo-footer {
@@ -203,7 +321,7 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color:#4d5ae5;
+  color: #4d5ae5;
   text-decoration: none;
 }
 
@@ -213,7 +331,5 @@ ul {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #f4f4fd
+  color: #f4f4fd;
 }
-
-
