--- a/css/styles.css
+++ b/css/styles.css
@@ -48,10 +48,11 @@ button {
 }
 
 /* Logotype */
-/* .header-line { */
+.header-line {
   /* display: flex; */
   /* align-items: center; */
-  /* border-bottom: 1px solid #e7e9fc; */
+  border-bottom: 1px solid #e7e9fc;
+}
 
 .navigation {
   display: flex;
@@ -318,7 +319,6 @@ ul {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  margin-bottom: 8px;
 }
 
 .portfolio-list-title {
@@ -327,9 +327,9 @@ ul {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
-  padding-top: 32px;
-  padding-left: 8px;
-  padding-bottom: 8px;
+  /* padding-top: 32px;
+  padding-left: 8px; */
+  margin-bottom: 8px;
 }
 .portfolio-list-text {
   font-size: 16px;
@@ -367,7 +367,7 @@ ul {
   text-transform: uppercase;
   color: #4d5ae5;
   text-decoration: none;
-  display: inline-block;
+  display:inline-block;
   margin-bottom: 16px; 
 }
 
@@ -378,6 +378,6 @@ ul {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #f4f4fd;
-  display: inline-block;
+  display:inline-block;
   margin-bottom: 16px; 
 }
