--- a/css/styles.css
+++ b/css/styles.css
@@ -39,8 +39,7 @@ button {
 }
 
 .container {
-  display: flex;
-  max-width: 1158px;
+  width: 1158px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -51,13 +50,12 @@ button {
 .header-line {
   display: flex;
   align-items: center;
-  /* justify-content: space-between;  */
+  justify-content: space-between;
   border-bottom: 1px solid #e7e9fc;
 }
 
 .navigation {
   display: flex;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .logo-header {
@@ -70,7 +68,7 @@ button {
   text-decoration: none;
   color: #4d5ae5;
   padding: 24px 0;
-  /* margin-right: 76px */
+  margin-right: 76px
 }
 
 .logo-header-span {
@@ -90,7 +88,6 @@ button {
   display: flex;
   align-items: center;
   gap: 40px;
-  margin-right: auto;
 }
 
 .navigation-item {
@@ -118,8 +115,8 @@ button {
 .address-details {
   font-style: normal;
   display: flex;
-  align-items: center;
-  margin-left: 332px;
+  /* align-items: center; */
+  /* margin-left: 332px; */
 }
 
 .address-list {
@@ -156,7 +153,7 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 }
 
 .section-headline-main {
@@ -166,7 +163,7 @@ button {
   text-align: center;
   color: #fff;
   max-width: 496px;
-  /* margin: 0 auto; */
+  margin: 0 auto;
 }
 
 .button {
