--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ button {
 }
 
 /* Logotype */
-.header-line {
+.header-container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -72,14 +72,7 @@ button {
 }
 
 .logo-header-span {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: #2e2f42;
-  margin-right: 76px
+    color: #2e2f42;
 }
 
 /* navigation */
