--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ button {
 }
 
 .benefits-item {
-  width:calc((100%-24*3)/4)
+  width:calc((100%-24px * 3) / 4)
 }
 .benefits-title-item {
   font-weight: 500;
@@ -363,16 +363,11 @@ ul {
   color: #4d5ae5;
   text-decoration: none;
   display: inline-block;
+  margin-bottom: 16px;
 }
 
 .logo-footer-span {
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
   color: #f4f4fd;
-  display: inline-block; 
 }
 
 .footer-text {
@@ -381,6 +376,5 @@ ul {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   padding-bottom: 100px;
-  margin-top: 24px;
-  max-width: 420px;
+  max-width: 264px;
 }
