--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ button {
 }
 
 .benefits-item {
-  width:calc((100%-24px * 3) / 4)
+  width:calc((100% - 24px * 3) / 4)
 }
 .benefits-title-item {
   font-weight: 500;
@@ -254,7 +254,6 @@ ul {
 .team-list {
   display: flex;
   gap: 24px;
-  padding-bottom: 120px;
 }
 
 .team-list-item {
@@ -289,7 +288,6 @@ ul {
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-  padding-bottom: 32px;
 }
 /* Portfolio */
 .portfolio {
@@ -315,7 +313,7 @@ ul {
 .portfolio-list-item {
   align-items: flex-start;
   width: calc((100% - 48px) / 3);
-  border: 1px solid #e7e9fc;
+  /* border: 1px solid #e7e9fc; */
 }
 
 .portfolio-list-image {
@@ -345,8 +343,6 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
-  padding-left: 8px;
-  padding-bottom: 30px;
 }
 
 .footer {
@@ -380,6 +376,5 @@ ul {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  padding-bottom: 100px;
   max-width: 264px;
 }
